syntax = "proto3";

option csharp_namespace = "NetGrpc.Authentication";

service AuthenticationService {
	rpc GenerateToken (TokenRequest) returns  (TokenReply);
}

message TokenRequest {

}

message TokenReply {

}